--- a/source/_posts/2014-04-08-spain.markdown
+++ b/source/_posts/2014-04-08-spain.markdown
@@ -5,15 +5,16 @@ date: 2014-04-08 16:43
 tags: Spain, Barcelona
 description: 
 published: false
-dont_cache_images: true
 priority: 0.5
 ---
 
-Even in winter the weather is Barcelona is nice. As soon as I landed and got my
+Even in winter the weather is Barcelona is lovely. As soon as I landed and got my
 bag through customs I put my heavy winter jacket away and was quite happy in
 just a T-shirt. It seemed like the warm weather would be great for helping me
 kick a cold that had been hanging around for my last few weeks in Berlin,
-leaving me sniffing and congested.
+that had left me sniffing and congested for far too long.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809549773/in/set-72157643866689355" title="Sagrada Familia by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3669/13809549773_b5c9a73fbe_c.jpg" width="800" height="601" alt="La Sagrada Familia"></a>
 
 <!-- more -->
 
@@ -22,34 +23,102 @@ lazy walk around berlin enjoying the warmth
 tapas, catalonian sausage and papas bravas, delicious but very garlicy
 
 
-free walking tour of barcelona. learnt about some unique catalonian christmas
-traditions. Caga Tio (or uncle shit), a log that kids beat with sticks each day,
-to aid with digestion, so on christmas day he will poop out candy under his rug.
-also, the pooing man, in nativity scenes.
+I took a free walking tour of Barcelona that went around a number of sites in
+the heart of Barcelona and give background and history of the city. The tour
+really made me realise how little I know about even recent Spanish history. I
+did not know that they had a dictatorship right up until 1975, which was
+apparently allowed by the rest of Europe because the dictator hadn't supported
+Hitler in WWII.
 
-tour made me realise how little I know about spanish history. they had a
-dictatorship up until 1975
+<a href="http://www.flickr.com/photos/lucasthenomad/13807882714/in/set-72157643866689355" title="First glimpse of Caga Tio, the shitting log by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2840/13807882714_d5216a705b_c.jpg" width="800" height="601" alt="First glimpse of Caga Tio"></a>
 
-read in the park
+I also learnt about some rather unique Catalan Christmas traditions. The
+first being Caga Tio (Literal translation: Uncle Shit), a happy looking log with
+a face and a blanket. Each day leading up to Christmas the kids beat Caga Tio
+with sticks "to help with digestion". Then on Christmas day, if the kids have
+beaten him enough to help him with his digestion problems, they peer under his
+blanket and find that he's pooped out a load of candy. An important life lesson
+to teach your kids!
 
-met up wit Ibrahim and Nathalie to go to a really nice tapas place they knew.
-amazing sangria, tasty steak bites, croquettes wth spreadable chorizo and melted
-cheese. very yum
+<a href="http://www.flickr.com/photos/lucasthenomad/13810536113/in/set-72157643866689355" title="So many caganers by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7126/13810536113_62c182214f_c.jpg" width="600" height="800" alt="So many caganers"></a>
 
-went to guell palace, the home of the guell family, renovated and opened to
-tourists since the last time I was in barcelona. gaudi designed, very beautiful.
-lots of nice curves and colour, lovely rainbow twisted chimney
+The other strange Catalan Christmas tradition is the caganer. The caganer is a
+little man, squatted over with his arse hanging out of his pants, and on the
+ground behind him is a freshly made turd. He's apparently hidden somewhere in
+every good Catalan persons nativity scene and the kids love to search for him.
+There was stall after stall selling these caganers, which you can get with in
+the likeness of all kinds of celebrities, the most distasteful being Nelson
+Mandela the same week he died. The guide said the caganer was something to do
+with representing giving back to the earth, but it just seems like they're
+obsessed with poop to me.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13807913783/in/set-72157643866689355" title="Nathalie, Ibrahim and me by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7309/13807913783_34a18f23dc_c.jpg" width="800" height="600" alt="Nathalie, Ibrahim and me"></a>
+
+One evening I arranged to meet up with one of my old Envato workmates Ibrahim,
+and his beautiful wife Nathalie, to go and eat at a really nice tapas place they
+had told me about.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13807896004/in/set-72157643866689355" title="Tapas by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7013/13807896004_9b77c7e756_c.jpg" width="600" height="800" alt="Tapas"></a>
+
+The place did not disappoint, everything we tried was delicious from the Spanish
+ham and croquettes to the not-so-traditional perfectly cooked little steakettes,
+with sangria to wash it down. I think my stand-out favourite was the sandwiches
+with [sobrasada](http://www.paisdequercus.com/web/media/catalog/product/cache/1/image/500x500/9df78eab33525d08d6e5fb8d27136e95/s/o/sobrasada_de_bellota.jpg)
+(spreadable chorizo) and melted cheese. Spreadable meat seems like it should be
+wrong, but it tasted fantastic. I'm told that when
+[sturicho](/images/sturicho.jpg) was visiting he loved the stuff too;
+Ibby said he probably would have brushed his teeth with the stuff if he could
+have :P
+
+It was lovely to see those two again, they're both such kind hospitable people.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13807979643/in/set-72157643866689355" title="Palau Güell's beautiful entrance by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7071/13807979643_2e3c6aae51_c.jpg" width="800" height="601" alt="Palau Güell's beautiful entrance"></a>
+
+I managed to get along to see Güell palace, a building that was once the home of
+the Güell family, which was closed for renovations the last time I was in
+Barcelona.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808355844/in/set-72157643866689355" title="Parabolic arches by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7302/13808355844_14212b2d48_c.jpg" width="601" height="800" alt="Parabolic arches"></a>
+
+It's another very beautiful building designed by Gaudí, designed with lots of
+smooth curves and vibrant colour. Gaudí used a lot of parabolic arches and other
+unique geometry, in his designs which give both strength as well as visually
+interesting features.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808807974/in/set-72157643866689355" title="Wrought iron work by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3801/13808807974_c1b85cb2b3_c.jpg" width="601" height="800" alt="Wrought iron work"></a>
+
+It featured a lot of quite complex wrought iron work which must have been made
+by very skilled craftsmen. It was all so perfect and regular, it's hard to
+believe it wasn't done by a machine.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808579334/in/set-72157643866689355" title="Palau Güell chimneys by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3819/13808579334_34846ded2c_c.jpg" width="800" height="601" alt="Palau Güell chimneys"></a>
+
+Up on the roof there were heaps of colourful chimneys, no two the same. Many
+were covered in broken bits of tile, a style heavily used by Gaudí in quite a
+few of his works, but there were a few that were just red bricks laid in
+interesting formations.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808511193/in/set-72157643866689355" title="The bullring shopping center by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3830/13808511193_4e985a5e60_c.jpg" width="800" height="601" alt="The bullring shopping center"></a>
 
 plaza de españa, old bullring that's been coverted into a shopping center. got
 up on the viewing platform for free, nice view of the city. nearby hotel with an
 infinity pool that the roof looks straight onto
 
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808520673/in/set-72157643866689355" title="Looking out from the rooftop, straight at a hotel pool by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3684/13808520673_8e1f63c67c_c.jpg" width="800" height="601" alt="Looking out from the rooftop, straight at a hotel pool"></a>
+
 monjac castle, memories from last time I was there, very much the same except
 now it's free to enter.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808555395/in/set-72157643866689355" title="Montjuïc Castle by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5504/13808555395_c2fe7003c2_c.jpg" width="800" height="601" alt="Montjuïc Castle"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808612155/in/set-72157643866689355" title="Barcelona by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7004/13808612155_755dbcd073_c.jpg" width="800" height="500" alt="Barcelona"></a>
 
 date with Mercé, went to see the "magic fountain". ridiculous crowd and the show
 was delayed, later fireworks went off and we found out it was for some very
 wealthy families wedding. NYE standard, epic.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808981964/in/set-72157643866689355" title="Magic fountain by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2909/13808981964_21e85ea3b0_c.jpg" width="800" height="600" alt="Magic fountain"></a>
 
 didn't really hit it off with merce, went to an irish bar for a few drinks
 before parting ways.
@@ -62,6 +131,17 @@ of the park without some twat, or group of twats, posing in front of it. it was
 like an endless line of people waiting to rush in. went home frustrated and
 sick of being sick.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13810906184/in/set-72157643866689355" title="Park Güell Logo by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5321/13810906184_e7aab18a47_c.jpg" width="800" height="504" alt="Park Güell Logo"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809086694/in/set-72157643866689355" title="Park Güell main stairway by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7090/13809086694_ec3de27f4a_c.jpg" width="800" height="601" alt="Park Güell main stairway"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13808713993/in/set-72157643866689355" title="Spiral pillars by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7230/13808713993_668bf0eec4_c.jpg" width="601" height="800" alt="Spiral pillars"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809144934/in/set-72157643866689355" title="Park Güell dragon by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2866/13809144934_9a03d34057_c.jpg" width="800" height="601" alt="Park Güell dragon"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809190964/in/set-72157643866689355" title="Park Güell by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7395/13809190964_2a5f3c5741_c.jpg" width="601" height="800" alt="Park Güell"></a>
+
+
 went to a couch surfing meeting at a little flamenco concert. met a bunch of
 lovely south americans. flamenco show had interesting guitar and singing and
 some very passionate dancing. I had a "front fow" seat, with mean the woman was
@@ -70,10 +150,20 @@ often looking right at me, 2ft away, making me a bit uncomfortable.
 nice chillian girl, Natalia, insists that I get in touch with her where I go to
 chilie or uragay, so she can hook me up with friends to stay with
 
-went to casa batillo, another home designed by gaudi. more lovely curves,
+went to casa batillo, another home designed by Gaudí. more lovely curves,
 spirals and gradients of colours. the building looks like a dragon along the
 rooftop from the outside. beautiful furniture, would have been an amazing place
 to live.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809497833/in/set-72157643866689355" title="Casa Batlló Facade by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3806/13809497833_e3fbede624_c.jpg" width="601" height="800" alt="Casa Batlló Facade"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809039093/in/set-72157643866689355" title="Whirlpool ceiling by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7357/13809039093_b7955d4fc3_c.jpg" width="800" height="601" alt="Whirlpool ceiling"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809204735/in/set-72157643866689355" title="Casa Batlló by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2832/13809204735_0f45c216f5_c.jpg" width="601" height="800" alt="Casa Batlló"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809366973/in/set-72157643866689355" title="Casa Batlló rooftop by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7117/13809366973_f627feefd8_c.jpg" width="800" height="601" alt="Casa Batlló rooftop"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809385475/in/set-72157643866689355" title="Dragon scale tiles by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7401/13809385475_22543ea05a_c.jpg" width="601" height="800" alt="Dragon scale tiles"></a>
 
 went back to sagrada la familia, much shorter lines this day. has been made a
 basiica by the pope in 2010. sadly lots of scaffolding covering my favourite
@@ -81,6 +171,22 @@ facade. ETA is 2030 so I may actually see it finished in my lifetime. realised
 from a model they have of the completed design, that the 5-6 tallest towers
 arent not built yet, so the "jesus" tower is going to be 2x as tall when it's
 done. compltetely epic.
+
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809927463/in/set-72157643866689355" title="Spiral! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7249/13809927463_026c86c61a_c.jpg" width="800" height="601" alt="Spiral!"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810099654/in/set-72157643866689355" title="Inside a tower through the doorway arch by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2895/13810099654_fd5569be9d_c.jpg" width="601" height="800" alt="Inside a tower through the doorway arch"></a>
+
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810295075/in/set-72157643866689355" title="Model of the completed Sagrada Familia by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7096/13810295075_f30b748621_c.jpg" width="601" height="800" alt="Model of the completed Sagrada Familia"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810328804/in/set-72157643866689355" title="Rainbow pillars by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2919/13810328804_7ac1795f11_c.jpg" width="601" height="800" alt="Rainbow pillars"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810315284/in/set-72157643866689355" title="Stunning lighting in the afternoon by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7340/13810315284_70ee143cc7_c.jpg" width="601" height="800" alt="Stunning lighting in the afternoon"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810039463/in/set-72157643866689355" title="The passion facade by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3750/13810039463_727a96e8f0_c.jpg" width="601" height="800" alt="The passion facade"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810183203/in/set-72157643866689355" title="Epic lighting by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7222/13810183203_d87235eb86_c.jpg" width="601" height="800" alt="Epic lighting"></a>
 
 love all the clean completixy of all the shapes involved, all coming back to
 simple math concepts. interesting museum underneath that I don't recall from
@@ -92,4 +198,5 @@ areas to compare. this time I took lots of photos which while just construction
 now, will be great to look back on in 20 years, seeing this massive structure
 still heavily in progress
 
-December 11th
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810745704/in/set-72157643866689355" title="Crazy rainbow building by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3706/13810745704_f46a278fb5_c.jpg" width="601" height="800" alt="Crazy rainbow building"></a>
