--- a/source/_posts/2014-04-08-spain.markdown
+++ b/source/_posts/2014-04-08-spain.markdown
@@ -100,46 +100,79 @@ interesting formations.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808511193/in/set-72157643866689355" title="The bullring shopping center by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3830/13808511193_4e985a5e60_c.jpg" width="800" height="601" alt="The bullring shopping center"></a>
 
-plaza de españa, old bullring that's been coverted into a shopping center. got
-up on the viewing platform for free, nice view of the city. nearby hotel with an
-infinity pool that the roof looks straight onto
-
+I went to Plaza de España to go up to the roof of Arenas de Barcelona, an old
+bullring that has since been converted into a shopping centre. There's a lift
+out the front that you have to pay a few Euro to get up to the viewing platform
+on the roof, or you can go into the shopping centre and use the escalators and
+get up there for free.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808520673/in/set-72157643866689355" title="Looking out from the rooftop, straight at a hotel pool by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3684/13808520673_8e1f63c67c_c.jpg" width="800" height="601" alt="Looking out from the rooftop, straight at a hotel pool"></a>
 
-monjac castle, memories from last time I was there, very much the same except
-now it's free to enter.
+From the roof you get a nice view of the city is most directions. You also get a
+view looking straight at this hotel's swimming pool. I imagine it was built
+before the viewing platform was there, but I can't imaging people rushing to use
+the pool now with hoards of people at Arenas looking straight out at you.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808555395/in/set-72157643866689355" title="Montjuïc Castle by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5504/13808555395_c2fe7003c2_c.jpg" width="800" height="601" alt="Montjuïc Castle"></a>
 
+From there I got a bus to Montjuïc Castle and have a look around. I remember
+visiting here the last time I was in town, and the building seemed mostly how I
+remembered it, although I'm pretty sure it wasn't free last time and now it is
+:D
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13808612155/in/set-72157643866689355" title="Barcelona by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7004/13808612155_755dbcd073_c.jpg" width="800" height="500" alt="Barcelona"></a>
 
-date with Mercé, went to see the "magic fountain". ridiculous crowd and the show
-was delayed, later fireworks went off and we found out it was for some very
-wealthy families wedding. NYE standard, epic.
+It's up on top of a hill, so it's another great place to get a view of Barcelona.
+
+In the evening I went to see a light/water/sound show dubbed "The Magic
+Fountain". When I arrived there was an absolutely massive crowd and the show
+seemed to be delayed. Nobody seemed to have much of an idea what was going on so
+I ducked off for a quick drink, then from where I was having my drink I saw a
+massive fireworks show going off from the direction of the fountain. It wouldn't
+have looked out of place on the TV amongst a wrap-up of the years NYE fireworks,
+it was pretty epic. I found out later that this was for a couples wedding...
+rich people!
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808981964/in/set-72157643866689355" title="Magic fountain by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2909/13808981964_21e85ea3b0_c.jpg" width="800" height="600" alt="Magic fountain"></a>
 
-didn't really hit it off with merce, went to an irish bar for a few drinks
-before parting ways.
-
-went to sagrada la familia, but the queue went right around the block because of
-the public holiday. went to park guell instead, but the public holiday meant it
-was packed with people like a circus and not the peaceful, pretty park I
-remembered. really challenging to get a photo of any of the real typical parts
-of the park without some twat, or group of twats, posing in front of it. it was
-like an endless line of people waiting to rush in. went home frustrated and
-sick of being sick.
+Anyway, I went back to the fountain and found that now that the fireworks were
+over they were back to a more normal schedule for the fountain, so I took a seat
+and watched the nicely synchronised display. Some of the water effects were
+really foamy and fluffy, and the lights coming through made it look like some
+sort of magic smoke. Really cool to see.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810906184/in/set-72157643866689355" title="Park Güell Logo by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5321/13810906184_e7aab18a47_c.jpg" width="800" height="504" alt="Park Güell Logo"></a>
 
+I tried to go to Sagrada Familia, but there was yet another public holiday so
+the queue went right around the block. I wasn't really keen on waiting for
+hours to get in and have the place be cramped full of people so I went to Park
+Güell instead.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13809086694/in/set-72157643866689355" title="Park Güell main stairway by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7090/13809086694_ec3de27f4a_c.jpg" width="800" height="601" alt="Park Güell main stairway"></a>
+
+Sadly the public holiday meant even though I didn't have to wait long to get in,
+the park was packed with people like a circus and not anything like the
+peaceful, pretty park I remembered.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808713993/in/set-72157643866689355" title="Spiral pillars by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7230/13808713993_668bf0eec4_c.jpg" width="601" height="800" alt="Spiral pillars"></a>
 
+It was really challenging to get a nice photo of any of the signature parts of
+the park without a dozen people also in the shot posing for their next Facebook
+avatar. I did manage to get a few shots that mislead you into thinking it wasn't
+like that at all, but that's only because I'm both stubborn and patient and will
+wait around for 10 minutes waiting for a gap.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13809144934/in/set-72157643866689355" title="Park Güell dragon by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2866/13809144934_9a03d34057_c.jpg" width="800" height="601" alt="Park Güell dragon"></a>
 
+The most well known part of the park, the dragon, was a nightmare. There was
+an endless line of people waiting to rush in for their photo, me included.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13809190964/in/set-72157643866689355" title="Park Güell by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7395/13809190964_2a5f3c5741_c.jpg" width="601" height="800" alt="Park Güell"></a>
+
+I ended up leaving feeling pretty sick (the cold was still hanging around),
+frustrated and generally tired of crowds. I probably should have just rested on
+the public holidays and gone the next day.
+
 
 
 went to a couch surfing meeting at a little flamenco concert. met a bunch of
