--- a/source/_posts/2014-04-08-spain.markdown
+++ b/source/_posts/2014-04-08-spain.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Barcelona, Spain"
 date: 2014-04-08 16:43
 tags: Spain, Barcelona
-description: 
+description:
 published: false
 priority: 0.5
 ---
@@ -18,17 +18,15 @@ that had left me sniffing and congested for far too long.
 
 <!-- more -->
 
-lazy walk around berlin enjoying the warmth
+I spent the first few days doing not much, walking around the city near La
+Rambla and enjoying the warmth, and trying to rest up.
 
-tapas, catalonian sausage and papas bravas, delicious but very garlicy
-
-
-I took a free walking tour of Barcelona that went around a number of sites in
-the heart of Barcelona and give background and history of the city. The tour
-really made me realise how little I know about even recent Spanish history. I
-did not know that they had a dictatorship right up until 1975, which was
-apparently allowed by the rest of Europe because the dictator hadn't supported
-Hitler in WWII.
+Once I was feeling a bit better I took a free walking tour of Barcelona that
+went around a number of sites in the heart of Barcelona and give background and
+history of the city. The tour really made me realise how little I know about
+even recent Spanish history. I did not know that they had a dictatorship right
+up until 1975, which was apparently allowed by the rest of Europe because the
+dictator hadn't supported Hitler in WWII.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13807882714/in/set-72157643866689355" title="First glimpse of Caga Tio, the shitting log by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2840/13807882714_d5216a705b_c.jpg" width="800" height="601" alt="First glimpse of Caga Tio"></a>
 
@@ -58,19 +56,20 @@ One evening I arranged to meet up with one of my old Envato workmates Ibrahim,
 and his beautiful wife Nathalie, to go and eat at a really nice tapas place they
 had told me about.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13807896004/in/set-72157643866689355" title="Tapas by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7013/13807896004_9b77c7e756_c.jpg" width="600" height="800" alt="Tapas"></a>
+<a href="http://www.flickr.com/photos/lucasthenomad/13807896004/in/set-72157643866689355" title="Tapas by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7013/13807896004_9b77c7e756_c.jpg" width="600" height="800" alt="Awsome tapas"></a>
 
 The place did not disappoint, everything we tried was delicious from the Spanish
-ham and croquettes to the not-so-traditional perfectly cooked little steakettes,
-with sangria to wash it down. I think my stand-out favourite was the sandwiches
-with [sobrasada](http://www.paisdequercus.com/web/media/catalog/product/cache/1/image/500x500/9df78eab33525d08d6e5fb8d27136e95/s/o/sobrasada_de_bellota.jpg)
+ham and croquettes to the not-so-traditional perfectly cooked little steak
+bites, with delightful sangria to wash it down. I think my stand-out favourite
+was the sandwiches with [sobrasada](/images/sobrasada_de_bellota.jpg)
 (spreadable chorizo) and melted cheese. Spreadable meat seems like it should be
 wrong, but it tasted fantastic. I'm told that when
-[sturicho](/images/sturicho.jpg) was visiting he loved the stuff too;
-Ibby said he probably would have brushed his teeth with the stuff if he could
-have :P
+[sturicho](/images/sturicho.jpg) was visiting he loved the stuff too; Ibby said
+he probably would have brushed his teeth with the stuff if he could have :P
 
-It was lovely to see those two again, they're both such kind hospitable people.
+It was great to see those two again, they're both such kind hospitable people.
+It's always a pleasure spending time with them and I look forward to (hopefully)
+being able to converse in Spanish with them next time I see them.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13807979643/in/set-72157643866689355" title="Palau Güell's beautiful entrance by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7071/13807979643_2e3c6aae51_c.jpg" width="800" height="601" alt="Palau Güell's beautiful entrance"></a>
 
@@ -173,15 +172,19 @@ I ended up leaving feeling pretty sick (the cold was still hanging around),
 frustrated and generally tired of crowds. I probably should have just rested on
 the public holidays and gone the next day.
 
+I saw that a couch surfing meeting up happening at a little flamenco concert at
+a bar on the other side of town, so I headed over to check it out. I met a bunch
+of lovely South Americans there, it was nice to hear some Spanish that I knew
+was actually Spanish, all the Catalan that's spoken in Barcelona is really
+off-putting for a Spanish learner.
 
+The flamenco show had beautifully played guitar and singing and some _very_
+passionate dancing. I had a "front row" seat, which meant the woman dancing was
+often facing right towards me, 2ft away, which did make me a bit uncomfortable.
 
-went to a couch surfing meeting at a little flamenco concert. met a bunch of
-lovely south americans. flamenco show had interesting guitar and singing and
-some very passionate dancing. I had a "front fow" seat, with mean the woman was
-often looking right at me, 2ft away, making me a bit uncomfortable.
-
-nice chillian girl, Natalia, insists that I get in touch with her where I go to
-chilie or uragay, so she can hook me up with friends to stay with
+One of the couch surfers was a nice girl from Chile, Natalia, who insists that I
+get in touch with her where I go to Chile or Uruguay, so she can put me in touch
+with friends to stay with there. Win!
 
 went to casa batillo, another home designed by Gaudí. more lovely curves,
 spirals and gradients of colours. the building looks like a dragon along the
@@ -205,11 +208,9 @@ from a model they have of the completed design, that the 5-6 tallest towers
 arent not built yet, so the "jesus" tower is going to be 2x as tall when it's
 done. compltetely epic.
 
-
 <a href="http://www.flickr.com/photos/lucasthenomad/13809927463/in/set-72157643866689355" title="Spiral! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7249/13809927463_026c86c61a_c.jpg" width="800" height="601" alt="Spiral!"></a>
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810099654/in/set-72157643866689355" title="Inside a tower through the doorway arch by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2895/13810099654_fd5569be9d_c.jpg" width="601" height="800" alt="Inside a tower through the doorway arch"></a>
-
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810295075/in/set-72157643866689355" title="Model of the completed Sagrada Familia by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7096/13810295075_f30b748621_c.jpg" width="601" height="800" alt="Model of the completed Sagrada Familia"></a>
 
@@ -230,6 +231,5 @@ had enough foresight to take photos of both the completed and under construction
 areas to compare. this time I took lots of photos which while just construction
 now, will be great to look back on in 20 years, seeing this massive structure
 still heavily in progress
-
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810745704/in/set-72157643866689355" title="Crazy rainbow building by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3706/13810745704_f46a278fb5_c.jpg" width="601" height="800" alt="Crazy rainbow building"></a>
